--- a/index.html
+++ b/index.html
@@ -202,8 +202,13 @@
             </div>
             
             <div class="form-group">
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" placeholder="Type your message here..."></textarea>
+                <label for="product">Select Product</label>
+                <select id="product" name="product" required style="width: 100%; padding: 15px 18px; border: 1.5px solid #e5e7eb; border-radius: 9px; font-size: 1rem; background: #f7f8fa; color: #232946; transition: border 0.2s, box-shadow 0.2s, background 0.2s; box-sizing: border-box;">
+                    <option value="" disabled selected>Select a product</option>
+                    <option value="CapCut Pro">CapCut Pro</option>
+                    <option value="Inshot Pro">Inshot Pro</option>
+                    <option value="Kinemaster Pro">Kinemaster Pro</option>
+                </select>
             </div>
             
             <button type="submit" class="submit-btn">Order Now</button>
