--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="contact-container">
         <div class="contact-header">
             <h1>Buy Now</h1>
-            <p>Fill out the form below and Book your order quickly , we'll get back to you as soon as possible.</p>
+            <p>Fill out the form below and Book your order quickly , we'll get back to you as soon as possible on your Email Check your Email properly After Order !.</p>
         </div>
         <div class="discount-banner">
             <span>🎉 <strong>90% Discount</strong> only for the first 100 users!</span>
@@ -196,10 +196,6 @@
                 <input type="email" id="email" name="email" placeholder="Enter your email address" required>
             </div>
             
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
-            </div>
             
             <div class="form-group">
                 <label for="product">Select Product</label>
